--- a/src/pages/charts-view/charts-view.scss
+++ b/src/pages/charts-view/charts-view.scss
@@ -2,7 +2,7 @@
     margin: 20px;
     .back {
         position: absolute;
-        right: 10px;
+        left: 40px;
     }
     .img {
         width: 40px;
