--- a/src/pages/charts-list/charts-list.scss
+++ b/src/pages/charts-list/charts-list.scss
@@ -1,11 +1,14 @@
 .list {
     margin: 20px;
     text-align: center;
+    display: flex;
+    flex-wrap: wrap;
     .charts-item {
         width: 200px;
         height: 200px;
         background: #f9f9f9;
         box-shadow: 0 1px 2px rgba(0,0,0,0.1);
+        margin: 10px;
         .name {
             color:#293c55;
             text-align: left;
