--- a/src/components/github/github.scss
+++ b/src/components/github/github.scss
@@ -3,7 +3,8 @@
     position: absolute;
     right: 10px;
     img {
-        width: 50px;
-        height: 30px;
+        width: 60px;
+        height: 50px;
+        padding:0 !important;
     }
 }
