--- a/src/pages/charts-list/charts-list.scss
+++ b/src/pages/charts-list/charts-list.scss
@@ -26,6 +26,7 @@
             height: 18px;
         }
         .thumbnail {
+            background: #ffffff;
             width: 180px;
             height: 150px;
             cursor: pointer;
