--- a/src/pages/charts-list/charts-list.scss
+++ b/src/pages/charts-list/charts-list.scss
@@ -10,14 +10,23 @@
         background: #f9f9f9;
         box-shadow: 0 1px 2px rgba(0,0,0,0.1);
         margin: 5px;
-        .name {
+        .lab {
             color:#293c55;
             text-align: left;
             padding: 0px 10px;
             height: 30px;
             line-height: 30px;
-            font-size: 16px;
+            font-size: 14px;
+            .index {
+                font-size: 12px;
+                color: #aaaaaa;
+                margin-right: 5px;
+            }
+            .name {
+  
+            }
         }
+       
         .icon {
             position: absolute;
             right: 8px;
