--- a/src/plugins/download-pic/download-pic.scss
+++ b/src/plugins/download-pic/download-pic.scss
@@ -1,7 +1,6 @@
 .download-png {
-    position: absolute;
+    // position: absolute;
     user-select: none;
-    left: 605px;
     top: 124px;
     .icon {
         cursor: pointer;
