update document title

--- a/src/pages/charts-view/charts-view.scss
+++ b/src/pages/charts-view/charts-view.scss
@@ -9,3 +9,12 @@
     grid-template-columns: 40px 40px;
     margin-left: -60px;
 }
+.compName {
+    position: absolute;
+    left: 20px;
+    font-size: 20px;
+    font-weight: bold;
+    padding: 2px 5px;
+    border-radius: 5px;
+    color: #0d1a26;
+}
